# mkmake

./: .gitignore  README.md  pyproject.toml
examples/: generic_make.py
src/mkmake/: __init__.py  metaproject.py
src/mkmake/projects/: __init__.py  c.py  project.py  test.py  yy.py
tests/: test_api_surface_usage.py  test_c_project_makefile.py  test_example_generic_make.py  test_imports.py  test_metaproject.py  test_yy_and_test_project.py
